[tool.poetry]
name = "toonforge"
version = "0.1.0"
description = "Comics generation"
authors = ["Stefan"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = {extras = ["tools"], version = "^0.22.1"}
load-dotenv = "^0.1.0"
crewai-tools = "^0.0.15"
flask = "^3.0.2"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-code>=1.0.0"]
build-backend = "poetry.core.masonry.api"



